force-app/main/default/objects/SAP_Order__c/SAP_Order__c.object-meta.xml
<CustomObject>
    <label>SAP Order</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>