force-app/main/default/objects/SAP_Order__c/fields/Battery__c.field-meta.xml
<CustomField>
    <fullName>Battery__c</fullName>
    <formula>UPPER(TEXT(Vehicle__r.Battery__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Battery</label>
    <type>Text</type>
</CustomField>