force-app/main/default/objects/SAP_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>UPPER(Vehicle__r.Owner__r.FirstName + &#39; &#39; + Vehicle__r.Owner__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>