force-app/main/default/objects/SAP_Order__c/fields/Interior__c.field-meta.xml
<CustomField>
    <fullName>Interior__c</fullName>
    <formula>UPPER(TEXT(Vehicle__r.Interior__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interior</label>
    <type>Text</type>
</CustomField>