force-app/main/default/objects/SAP_Order__c/fields/Paint_Code__c.field-meta.xml
<CustomField>
    <fullName>Paint_Code__c</fullName>
    <formula>UPPER(Vehicle__r.Paint__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paint Code</label>
    <type>Text</type>
</CustomField>