force-app/main/default/objects/SAP_Order__c/fields/Rear_Seats__c.field-meta.xml
<CustomField>
    <fullName>Rear_Seats__c</fullName>
    <formula>IF(Vehicle__r.Rear_Seats__c == TRUE, &#39;TRUE&#39;,&#39;FALSE&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rear Seats</label>
    <type>Text</type>
</CustomField>