force-app/main/default/objects/SAP_Order__c/fields/Self_Driving_Module__c.field-meta.xml
<CustomField>
    <fullName>Self_Driving_Module__c</fullName>
    <formula>IF(Vehicle__r.Self_Driving__c == TRUE, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Self Driving Module</label>
    <type>Text</type>
</CustomField>