force-app/main/default/objects/SAP_Order__c/fields/Sunroof__c.field-meta.xml
<CustomField>
    <fullName>Sunroof__c</fullName>
    <formula>IF(Vehicle__r.Sunroof__c == TRUE, &#39;TRUE&#39;,&#39;FALSE&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sunroof</label>
    <type>Text</type>
</CustomField>