force-app/main/default/objects/SAP_Order__c/fields/Wheel_Style__c.field-meta.xml
<CustomField>
    <fullName>Wheel_Style__c</fullName>
    <formula>UPPER(TEXT(Vehicle__r.Wheels__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wheel Style</label>
    <type>Text</type>
</CustomField>